--- a/app/views/issues/_checklist_form.html.erb
+++ b/app/views/issues/_checklist_form.html.erb
@@ -1,5 +1,5 @@
-<% fields_for :issue, issue, :builder => TabularFormBuilder do |f| -%>
-<div>
+<% fields_for :issue, issue do |f| -%>
+<div class="tabular">
   <p id="issue_checklist_form">
     <label><%=l(:label_issue_checklist_plural)%></label>
     <span id="checklist_form_items"> </span> 
